<resources>
    <string name="app_name">My WeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="degFah">Degrees Fahrenheit</string>
    <string name="degCel">Degrees Celsius</string>
    <string name="degKel">Degrees Kelvin</string>
    <string name="tempChoose">Choose your Temperature</string>
    <string name="btnDegF">Fahrenheit</string>
    <string name="btnDegC">Celsius</string>
    <string name="btnDegK">Kelvin</string>
    <string name="convert">Convert</string>
    <string name="hint">Type Here</string>
    <string name="enterTemp">Please enter the temperature and select the correct units then press Convert:</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="Welcome">Welcome to Alejandro\'s App</string>
    <string name="goWeather">Convert\nTemp</string>
    <string name="goTicTacToe">Tic Tac Toe</string>
    <string name="goInfo">Info</string>
    <string name="goMusic">Favorite\nSong</string>
    <string name="goTakePic">Take\nPicture</string>
    <string name="goDraw">My\nDrawing</string>
    <string name="mExit">Exit</string>
    <string name="mMenu">Main Menu</string>
    <string name="seasonResult">Your favorite season is </string>
    <string name="seasonTemp">Your favorite temperature is </string>
    <string name="allResultYes">Sorry for your allergies</string>
    <string name="allResultNO">You don\'t have allergies</string>
    <string name="title_activity_my_drawing">MyDrawing</string>
    <!--    Adding an array of themes -->
    <string-array name="mythemes">
        <item>Material-Light</item>
        <item>Alejandro-Theme</item>
    </string-array>
    <string name="themeOption">Chose your theme</string>
    <string name="title_activity_tic_tac_toe">TicTacToeActivity</string>
    <!--    FOR TIC-TAC-TOE-->
    <string name="message_label">Player X\'s turn</string>
    <string name="new_game_button">New Game</string>
    <string name="title_activity_spinner">Spinner</string>


    <string name="informationTitle">Your Information</string>
    <string name="favSeason">What is your favorite season?</string>
    <string name="favTemp">What is your favorite temperature?</string>
    <string name="allergies">Do you have any allergies?</string>

    <!-- Options for the SPINNERS -->
    <string-array name="seasons">
        <item>Summer</item>
        <item>Fall</item>
        <item>Winter</item>
        <item>Spring</item>
    </string-array>
    <string name="title_activity_information_result">InformationResultActivity</string>
    <string name="title_activity_song">SongActivity</string>
    <string name="title_activity_take_picture">TakePictureActivity</string>


</resources>
