<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainMenuActivity"
    tools:showIn="@layout/activity_main_menu">


    <TextView
        android:id="@+id/lblWelcome"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="605dp"
        android:gravity="center_horizontal"
        android:text="@string/Welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <GridLayout
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="351dp"
        android:layout_height="135dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="2"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnWeather"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:text="@string/goWeather" />

        <Button
            android:id="@+id/btnTicTacToe"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center|fill"
            android:text="@string/goTicTacToe" />

        <Button
            android:id="@+id/btnInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="center|fill"
            android:text="@string/goInfo" />

        <Button
            android:id="@+id/btnSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:text="@string/goMusic" />

        <Button
            android:id="@+id/btnTakePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center|fill"
            android:text="@string/goTakePic" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="center|fill"
            android:text="@string/mExit" />
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>