<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/tempChoose"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:text="@string/tempChoose"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/lblOutput"
        android:layout_width="309dp"
        android:layout_height="73dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />


    <EditText
        android:id="@+id/textBox"
        android:layout_width="125dp"
        android:layout_height="41dp"
        android:text="Enter temp here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="2"
        app:layout_constraintRight_toRightOf="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264" />

    <RadioGroup
        android:id="@+id/tempGroup"
        android:layout_width="100dp"
        android:layout_height="89dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411">

        <RadioButton
            android:id="@+id/btnDegF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDegF" />

        <RadioButton
            android:id="@+id/btnDegC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDegC" />

        <RadioButton
            android:id="@+id/btnDegK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDegK" />

    </RadioGroup>

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:onClick="onClick"
        android:text="@string/convert"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582" />

    <TextView
        android:id="@+id/lblOutputF"
        android:layout_width="63dp"
        android:layout_height="47dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="168dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/lblOutputC"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="463dp"
        android:layout_marginEnd="226dp"
        android:layout_marginBottom="167dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblOutputK"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="461dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="172dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>